    TODO: Save authentication password?
    TODO: Fix Provide as Mac OS X service
    TODO: Support UTIs
    TODO: Fix issue with generating icon from imageview on retina macs
    TODO: More examples
    TODO: Make class based system with inheritance for different output modes in ScriptExec
    TODO: Fix issue where font size changes don't apply to new text entered in editor
    * Platypus now requires Mac OS X 10.7 or later and a 64-bit Intel system. Older versions continue to work just fine on 32-bit 10.6 systems, and version 4.4 still works on PowerPC. But it's time to leave the past behind. It's been 9 years since the last 32-bit Mac was released.
    * Copy icon path in icon image view contextual menu
    * Better keyboard shortcuts for built-in editor
    * Text size can be set in built-in editor
    * Proper icon temp file handling
    * Fixed issue with Open... menu item and file types in ScriptExec
    * Font size in web output view can now also be increased/reduced
    * Increased text size in built-in editor
    * Updated documentation on files installed by command line tool
    * Dynamic (in code) install path for command line tool scripts
    * Platypus-generated apps now remember font size set by user
    * Auto-focus on app name text field on app launch

For 4.9
    * Users can now manually increase/decrease the font size in Platypus-generated apps
    * Status menu items can now be selected. This will run the script again with the menu title as an argument.
    * Arguments can now be passed to Platypus-generated apps via the command line
    * In Progress Bar output, it is now possible to use DETAILS:SHOW and DETAILS:HIDE to toggle details field visibility
    * New feature: If script prints "QUITAPP" to STDOUT, the wrapper application will quit.
    * Platypus now remembers app creation dialog settings such as "Optimize Nib"
    * Platypus now remembers opened Profiles in the Open Recent menu